# airodor-wifi

./: .dockerignore  .gitignore  .gitpod.yml  README.md  app.py  requirements.txt  run_on_raspberry_pi.md  run_ventilation_server.sh  test_airodor.py
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml  python-app.yml
airodor-wifi-api/: airodor.py
airodor_web_app/: README.md  pyproject.toml  test.sh
airodor_web_app/airodor_web_app/: app.py  wsgi.py
airodor_web_app/airodor_web_app/static/: main.css
airodor_web_app/airodor_web_app/templates/: index.html
airodor_web_app/tests/: test_airodor_web_app  test_airodor_web_app.py
airodor_wifi_api/: README.md  airodor.py  main.py  pyproject.toml  test.sh
airodor_wifi_api/airodor_wifi_api/: airodor.py  main.py
airodor_wifi_api/tests/: test_airodor_wifi_api.py
container/: Dockerfile  nginx_app_site_config
templates/: index.html
