[tool.poetry]
name = "airodor-web-app"
version = "0.1.0"
description = ""
authors = ["BenniWi <benjamin.wilking@gmail.com>"]
readme = "README.md"
packages = [{ include = "airodor_web_app", from = "." }]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"
airodor_wifi_api = { git = "https://github.com/BenniWi/airodor-wifi.git", subdirectory = "airodor_wifi_api", branch = "main" }
# airodor_wifi_api = {path = "../airodor_wifi_api", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
black = "^23.1.0"
docstr-coverage = "^2.2.0"
mypy = "^1.1.1"
flake8-pyproject = "^1.2.2"

[tool.black]
skip-string-normalization = true  # will not change 'a' into "a"
line-length = 120

[tool.flake8]
ignore = ['E203']
max-line-length = 120
count = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.0.0"
addopts = "-rq -q"
testpaths = [
    "tests"
]

[tool.mypy]
exclude = [
    '.*/__init__.py',
    '.*/main.py'
]

[tool.coverage.report]
fail_under = 0

[tool.coverage.run]
omit = [
    "**/__init__.py",
    "**/main.py",
]

[virtualenvs]
in-project = true