[tool.poetry]
name = "airodor-wifi-api"
version = "0.1.0"
description = "api for the airodor wifi module from limot"
authors = ["BenniWi <benjamin.wilking@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "airodor_wifi_api"}]

[tool.poetry.dependencies]
python = "^3.8"
yarl = "^1.8.2"
pytz = "^2023.3"
ipaddress = "^1.0.23"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
awapi = "airodor_wifi_api.main:main"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
black = "^23.1.0"
docstr-coverage = "^2.2.0"
mypy = "^1.1.1"
flake8-pyproject = "^1.2.2"
types-requests = "2.28.11"

[tool.black]
skip-string-normalization = true  # will not change 'a' into "a"
line-length = 120

[tool.flake8]
ignore = ['E203']
max-line-length = 120
count = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.0.0"
addopts = "-rq -q"
testpaths = [
    "tests"
]

[tool.mypy]
exclude = [
    '.*/__init__.py',
    '.*/main.py'
]

[tool.coverage.report]
fail_under = 70

[tool.coverage.run]
omit = [
    "**/__init__.py",
    "**/main.py",
]

[virtualenvs]
in-project = true
